Update morphiq-denoise/src/main/java/com/prophetizo/wavelets/swt/SwtTrendMomentumStudy.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>